<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="tab_thkns_material_index">Index of refraction</string>
    <string name="tab_thkns_sphere_power">Sphere power</string>
    <string name="tab_thkns_cylinder_power">Cylinder power</string>
    <string name="tab_thkns_axis">Axis</string>
    <string name="tab_thkns_base_curve">Real base curve</string>
    <string name="tab_thkns_center_thickness">Center thickness</string>
    <string name="tab_thkns_edge_thickness">Edge thickness</string>
    <string name="tab_thkns_lens_diameter">Lens diameter</string>
    <string name="tab_thkns_wrong_axis">Invalid axis data</string>
    <string name="tab_thkns_provide_sphere">Please, provide sphere power</string>
    <string name="tab_thkns_provide_center_thickness">Please, provide center thickness</string>
    <string name="tab_thkns_provide_diameter">Please, provide lens diameter</string>
</resources>
