<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calculationContainerConstr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/text_view_spinner"
                style="@style/SimpleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:padding="16dp"
                android:text="@string/tab_thkns_material_index"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/view_cylinder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:entries="@array/index_of_refraction"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/view_cylinder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_spinner"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_spinner_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintTop_toTopOf="@+id/spinner"
                app:srcCompat="@drawable/arrow_gray_down"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view_cylinder"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="60dp"
                android:background="@color/gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_sphere"
                style="@style/TextInputWrapper"
                android:layout_marginTop="14dp"
                android:hint="@string/tab_thkns_sphere_power"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_cylinder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sphere_"
                    style="@style/TextInputEditText"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_cylinder"
                style="@style/TextInputWrapper"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_cylinder_power"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_sphere">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cylinder_"
                    style="@style/TextInputEditText"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_axis"
                style="@style/TextInputWrapper"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_axis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_cylinder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/axis_"
                    style="@style/TextInputEditText"
                    android:maxLength="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_curve"
                style="@style/TextInputWrapper"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_base_curve"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_axis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/curve_"
                    style="@style/TextInputEditText"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_center_thickness"
                style="@style/TextInputWrapper"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_center_thickness"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_curve">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/center_thickness"
                    style="@style/TextInputEditText"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_edge_thickness"
                style="@style/TextInputWrapper"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_edge_thickness"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_center_thickness">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edge_thickness"
                    style="@style/TextInputEditText"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_diameter"
                style="@style/TextInputWrapper"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/tab_thkns_lens_diameter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_edge_thickness">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diameter_"
                    style="@style/TextInputEditText"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:scaleType="center"
        app:backgroundTint="@color/primary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/calculate"
        app:useCompatPadding="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
